Spacing fixes

--- a/public/static/css/index_base.less
+++ b/public/static/css/index_base.less
@@ -116,7 +116,10 @@ div#site_header.panel{
 
   	padding-right:0;
 
-
+    h3{
+        font-size:1.3em;
+        margin-top:0;
+    }
 
  	div.row{
 	   	background-color: @trans_back;
@@ -203,6 +206,10 @@ div#site_header.panel{
             width: 100%;
             font-size:2em;
             font-weight:bold;
+        }
+
+        #pledge_stats{
+            margin-bottom:0;
         }
     }
 }
